--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "sass": "^1.71.1"
     },
     "devDependencies": {
+        "async": "^3.2.5",
         "date-and-time": "^3.1.1",
         "ejs": "^3.1.9",
         "fs": "^0.0.1-security",
+        "fs-extra": "^11.2.0",
         "morgan": "^1.10.0",
         "mssql": "^10.0.2",
         "mysql": "^2.18.1",
